try to fix overflow-x hidden

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,9 @@
     box-sizing: border-box;
     font-family: 'Noto Sans TC', sans-serif;
 }
-
+html {
+    overflow-x: hidden;
+}
 body {
     margin: 0px;
     overflow-x:hidden;
@@ -221,9 +223,6 @@ main {margin-top:55px;}
 
 }
 @media (max-width:600px) {
-    body {
-        overflow-x: hidden;
-    }
     .smallbox {
         width:90%; /*90/15 = 6倍 */
         padding-top: 84% 
@@ -233,7 +232,12 @@ main {margin-top:55px;}
     }
     .background-img {
         width:350px;height:200px;
-        position:absolute;top:202px;right:-150px; /*想不到辦法*/
+        position:absolute;top:28px;right:0px; /*想不到辦法*/
+    }
+    .backgroundbox {
+        width:350px;height:228px;
+        position:absolute;top:174px;right:-150px;
+        overflow: hidden;
     }
 }
 
